--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -1,27 +1,25 @@
 \chapter{Elastic scattering of protons}
 
-\> add also double pomeron exchange or SD?
-
-\section{Models of elastic scattering}
+\section{Hadronic models}
 
 \subsection{The model of Islam et al.}
 
-\bref{Islam2004,Islam2006,Islam2007}
+\bref{islam87,islam03,islam04,islam06,islam07}
 
 \> the structure of proton is very important for low $|t|$ el. scat
 \> just putting several ideas together
 
 \subsection{The model of Petrov, Predazzi and Prokudin}
 
-\bref{ppp}
+\bref{ppp03}
 
 \subsection{The model of Bourrely, Soffer and Wu}
 
-\bref{bsw}
+\bref{wu70,bsw79,bsw84,bsw03}
 
 \subsection{The model of Block and Halzen}
 
-\bref{bh}
+\bref{bh99}
 
 \section{Coulomb interference}
 
