--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -32,7 +32,7 @@ Hill's equation (Sec.~3.3 in \bref{wilson}, Eq.~(4.33) in \bref{dolezal} or in \
 
 \section{TOTEM}
 
-\> Description of TOTEM detectors
+\> Description of TOTEM detectors \bref{totem04,totem08,totem10}
 
 \subsection[rp system]{The Roman Pot system}
 
@@ -53,7 +53,7 @@ Hill's equation (Sec.~3.3 in \bref{wilson}, Eq.~(4.33) in \bref{dolezal} or in \
 }
 
 \> Naming schemes
-\>> official \bref{rp naming} arm-station-unit-pot-plane-vfat-strip
+\>> official \bref{totem-rp-naming} arm-station-unit-pot-plane-vfat-strip
 \>> OfflineSW |arm|station|pot|plane|vfat
 
 \tab[\strut\quad#\quad\hfil&\quad#\quad\hfil&\quad#\quad\hfil\cr]{rp naming schemes}{RP system naming schemes}{\bln
