--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1,24 +1,65 @@
-@Article{Gallinaro:2006vz,
-     author    = "Gallinaro, Michele",
-	collaboration = "CDF",
-     title     = "Diffractive and exclusive measurements at CDF",
-     year      = "2006",
-     eprint    = "hep-ex/0606024",
-     SLACcitation  = "%%CITATION = HEP-EX/0606024;%%"
-	link		= "http://arxiv.org/pdf/hep-ex/0606024"
+#--------------------------------------------- TOTEM ------------------------------------------------
+
+@Article{totem04,
+		author="TOTEM collaboration",
+		title="Technical design report",
+		pages="CERN-LHCC-2004-002",
+		year="2004",
+		journal=""
 }
 
-@Article{Goulianos:2005,
-	author			= "Goulianos, Konstantin",
-	collaboration	= "CDF",
-	title			= "Alignment of the CDF roman pot spectrometer",
-	conference		= "HERA - LHC workshop",
-	journal			= "HERA - LHC workshop",
-	year			= "2005",
-	link			= "http://indico.cern.ch/materialDisplay.py?contribId=s7t4\&sessionId=8\&\hfil\break materialId=0\&confId=a045699"
+@Article{totem-blois06,
+		author="TOTEM collaboration",
+		title="TOTEM physics",
+		year="2006",
+		journal="XIth Blois Conference"
 }
 
-@Article{Islam2003,
+
+@Techreport{totem-rp-naming,
+	author			= "Ruggiero, G.",
+	institution		= "TOTEM",
+	title			= "Product breakdown structure and naming scheme of the Roman Pot System",
+	type			= "EDMS Document"
+	number			= "906715"
+	year			= "2008"
+}
+
+@article{totem10,
+      author         = "Antchev, G. and Aspell, P. and Atanassov, I. and Avati,
+                        V. and Berardi, V. and others",
+      title          = "{The TOTEM detector at LHC}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A617",
+      pages          = "62-66",
+      doi            = "10.1016/j.nima.2009.08.083",
+      year           = "2010",
+}
+
+@Article{totem08,
+      author         = "Anelli, G. and others",
+      title          = "{The TOTEM experiment at the CERN Large Hadron Collider}",
+      collaboration  = "TOTEM Collaboration",
+      journal        = "JINST",
+      volume         = "3",
+      pages          = "S08007",
+      doi            = "10.1088/1748-0221/3/08/S08007",
+      year           = "2008",
+}
+
+
+#------------------------------------------- ELASTIC MODELS -----------------------------------------
+
+@Article{islam87,
+		author="M. M. Islam, V. Innocente, T. Fearnley, G. Sanguietti",
+		title="High energy $pp$ and $\bar p p$ Elastic Scattering and Nucleon Structure",
+		journal="Europhys. Lett.",
+		volume="4",
+		year="1987",
+		pages="189--196"
+}
+
+@Article{islam03,
 		author="M. M. Islam, R. J. Luddy, A. V. Prokudin",
 		title="pp elastic scattering at LHC and nucleon structure",
 		journal="Mod. Phys. Lett. ",
@@ -27,27 +68,9 @@
 		year="2003",
 		pages="743--752"
 }	
-
-@Article{Islam1987,
-		author="M. M. Islam, V. Innocente, T. Fearnley, G. Sanguietti",
-		title="High energy $pp$ and $\bar p p$ Elastic Scattering and Nucleon Structure",
-		journal="Europhys. Lett.",
-		volume="4",
-		year="1987",
-		pages="189--196"
-}
     
 
-@Article{Islam2007,
-     author    = "Islam, M. M. and Kaspar, J. and Luddy, R. J.",
-     title     = "pp Elastic Scattering at LHC in a Nucleon-Structure Model",
-     year      = "2007",
-	 journal	= "12th Blois conference, Hamburg"
-     eprint    = "arXiv:0708.1156 [hep-ph]",
-     SLACcitation  = "%%CITATION = ARXIV:0708.1156;%%"
-}
-
-@Article{Islam2004,
+@Article{islam04,
 		author="Islam, M. M. and Luddy, R. J. and Prokudin, A. V.",
 		title="pp elastic scattering at LHC in near forward direction",
 		journal="Phys. Lett.",
@@ -57,7 +80,7 @@
 }    
 
 % the review
-@Article{Islam2006,
+@Article{islam06,
      author    = "Islam, M. M. and Luddy, R. J. and Prokudin, A. V.",
      title     = "{Near forward $p p$ elastic scattering at LHC and nucleon
                   structure}",
@@ -71,26 +94,51 @@
      SLACcitation  = "%%CITATION = HEP-PH/0508200;%%"
 }
 
-
-@Url{wikipedia,
-	title="Wikipedia",
-	url = "http://en.wikipedia.org/"
+@Article{islam07,
+     author    = "Islam, M. M. and Kaspar, J. and Luddy, R. J.",
+     title     = "pp Elastic Scattering at LHC in a Nucleon-Structure Model",
+     year      = "2007",
+	 journal	= "12th Blois conference, Hamburg"
+     eprint    = "arXiv:0708.1156 [hep-ph]",
+     SLACcitation  = "%%CITATION = ARXIV:0708.1156;%%"
 }
 
-@Book{becvar,
-	author="Be\v cv\'a\v r, F.",
-	title="Lecture notes",
-	year="2001"
+@Article{wu70,
+     author    = "Cheng, Hung and Wu, T. T.",
+     title     = "{Limit of Cross-Sections at Infinite Energy}",
+     journal   = "Phys. Rev. Lett.",
+     volume    = "24",
+     year      = "1970",
+     pages     = "1456-1460",
+     doi       = "10.1103/PhysRevLett.24.1456",
+     SLACcitation  = "%%CITATION = PRLTA,24,1456;%%"
 }
 
-@Book{barlow,
-	author    = "Barlow, R. J.",
-	title     = "Statistics: a guide to the use of statistical methods in the physical sciences.",
-	publisher = "Wiley",
-	year	  = "1989"
+@Article{bsw79,
+     author    = "Bourrely, C. and Soffer, Jacques and Wu, Tai Tsun",
+     title     = "{A New Impact Picture for Low and High-Energy Proton Proton
+                  Elastic Scattering}",
+     journal   = "Phys. Rev.",
+     volume    = "D19",
+     year      = "1979",
+     pages     = "3249",
+     doi       = "10.1103/PhysRevD.19.3249",
+     SLACcitation  = "%%CITATION = PHRVA,D19,3249;%%"
 }
 
-@Article{bsw,
+@Article{bsw84,
+     author    = "Bourrely, C. and Soffer, Jacques and Wu, T. T.",
+     title     = "{Impact Picture Expectations for Very High-Energy Elastic
+                  $p p$ and $p \bar{p}$ Scattering}",
+     journal   = "Nucl. Phys.",
+     volume    = "B247",
+     year      = "1984",
+     pages     = "15",
+     doi       = "10.1016/0550-3213(84)90369-9",
+     SLACcitation  = "%%CITATION = NUPHA,B247,15;%%"
+}
+
+@Article{bsw03,
      author    = "Bourrely, Claude and Soffer, Jacques and Wu, Tai Tsun",
      title     = "{Impact picture phenomenology for $\pi^+$ -p, $K^+$ -p and
                   $p p$, $\bar{p} p$ elastic scattering at high-energies}",
@@ -104,42 +152,8 @@
      SLACcitation  = "%%CITATION = HEP-PH/0210264;%%"
 }
 
-@Article{wu1970,
-     author    = "Cheng, Hung and Wu, T. T.",
-     title     = "{Limit of Cross-Sections at Infinite Energy}",
-     journal   = "Phys. Rev. Lett.",
-     volume    = "24",
-     year      = "1970",
-     pages     = "1456-1460",
-     doi       = "10.1103/PhysRevLett.24.1456",
-     SLACcitation  = "%%CITATION = PRLTA,24,1456;%%"
-}
 
-@Article{bsw1978,
-     author    = "Bourrely, C. and Soffer, Jacques and Wu, Tai Tsun",
-     title     = "{A New Impact Picture for Low and High-Energy Proton Proton
-                  Elastic Scattering}",
-     journal   = "Phys. Rev.",
-     volume    = "D19",
-     year      = "1979",
-     pages     = "3249",
-     doi       = "10.1103/PhysRevD.19.3249",
-     SLACcitation  = "%%CITATION = PHRVA,D19,3249;%%"
-}
-
-@Article{bsw1984,
-     author    = "Bourrely, C. and Soffer, Jacques and Wu, T. T.",
-     title     = "{Impact Picture Expectations for Very High-Energy Elastic
-                  $p p$ and $p \bar{p}$ Scattering}",
-     journal   = "Nucl. Phys.",
-     volume    = "B247",
-     year      = "1984",
-     pages     = "15",
-     doi       = "10.1016/0550-3213(84)90369-9",
-     SLACcitation  = "%%CITATION = NUPHA,B247,15;%%"
-}
-
-@Article{bh,
+@Article{bh99,
      author    = "Block, M. M. and Gregores, E. M. and Halzen, F. and
                   Pancheri, G.",
      title     = "{Photon - proton and photon-photon scattering from nucleon-
@@ -154,7 +168,7 @@
      SLACcitation  = "%%CITATION = HEP-PH/9809403;%%"
 }
 
-@Article{ppp,
+@Article{ppp03,
      author    = "Petrov, V. A. and Predazzi, E. and Prokudin, A.",
      title     = "{Coulomb interference in high-energy p p and anti-p p
                   scattering}",
@@ -168,7 +182,9 @@
      SLACcitation  = "%%CITATION = HEP-PH/0206012;%%"
 }
 
-@Article{cahn,
+#------------------------------------------ ELASTIC THEORY ------------------------------------------
+
+@Article{cahn82,
 		author="R. Cahn",
 		title="Coulombic - hadronic interference in an eikonal model",
 		journal="Zeit. Phys.",
@@ -177,7 +193,7 @@
 		pages="253"
 }
 
-@Article{wy,
+@Article{wy68,
      author    = "West, Geoffrey B. and Yennie, D. R.",
      title     = "{Coulomb interference in high-energy scattering}",
      journal   = "Phys. Rev.",
@@ -200,36 +216,47 @@
      SLACcitation  = "%%CITATION = ZEPYA,C63,619;%%"
 }
 
-@Book{barlow,
-	author    = "Barlow, R. J.",
-	title     = "Statistics: a guide to the use of statistical methods in the physical sciences.",
-	publisher = "Wiley",
-	year	  = "1989"
+@Article{kl11,
+      author         = "Kaspar, Jan and Kundrat, Vojtech and Lokajicek, Milos and
+                        Prochazka, Jiri",
+      title          = "{Phenomenological models of elastic nucleon scattering
+                        and predictions for LHC}",
+      journal        = "Nucl.Phys.",
+      volume         = "B843",
+      pages          = "84-106",
+      doi            = "10.1016/j.nuclphysb.2010.09.020",
+      year           = "2011",
 }
 
-@Techreport{smearing,
-	author			= "Ka\v spar, J.",
-	institution		= "TOTEM",
-	title			= "Description and simulation of beam smearing effects",
-	type			= "TOTEM-NOTE"
-	number			= "2007-005"
-	year			= "2007"
+@Article{kl09,
+      author         = "Kundrat, Vojtech and Kaspar, Jan and Lokajicek, Milos",
+      title          = "{Theoretical aspects of high energy elastic nucleon
+                        scattering}",
+      year           = "2009",
+      eprint         = "0912.1188",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
 }
 
-@Article{tdr,
-		author="TOTEM collaboration",
-		title="Technical design report",
-		pages="CERN-LHCC-2004-002",
-		year="2004",
-		journal=""
+@article{kl09-models,
+      author         = "Kaspar, Jan and Kundrat, Vojtech and Lokajicek, Milos",
+      title          = "{Contemporary models of elastic nucleon scattering and
+                        their predictions for LHC}",
+      year           = "2009",
+      eprint         = "0912.0112",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
 }
 
-@Article{blois11,
-		author="TOTEM collaboration",
-		title="TOTEM physics",
-		year="2006",
-		journal="XIth Blois Conference"
+@article{kl07,
+      author         = "Kundrat, Vojtech and Kaspar, Jan and Lokajicek, Milos",
+      title          = "{To the theory of high-energy nucleon collisions}",
+      pages          = "273-278",
+      year           = "2007",
 }
+
+
+#--------------------------------------------- OPTICS -----------------------------------------------
 
 @Book{wilson,
       author         = "Wilson, E.J.N.",
@@ -251,13 +278,26 @@
       year           = "1993",
 }
 
-@Techreport{rp naming,
-	author			= "Ruggiero, G.",
-	institution		= "TOTEM",
-	title			= "Product breakdown structure and naming scheme of the Roman Pot System",
-	type			= "EDMS Document"
-	number			= "906715"
-	year			= "2008"
+#------------------------------------------- ALIGNMENT ----------------------------------------------
+
+@Article{Gallinaro:2006vz,
+     author    = "Gallinaro, Michele",
+	collaboration = "CDF",
+     title     = "Diffractive and exclusive measurements at CDF",
+     year      = "2006",
+     eprint    = "hep-ex/0606024",
+     SLACcitation  = "%%CITATION = HEP-EX/0606024;%%"
+	link		= "http://arxiv.org/pdf/hep-ex/0606024"
+}
+
+@Article{Goulianos:2005,
+	author			= "Goulianos, Konstantin",
+	collaboration	= "CDF",
+	title			= "Alignment of the CDF roman pot spectrometer",
+	conference		= "HERA - LHC workshop",
+	journal			= "HERA - LHC workshop",
+	year			= "2005",
+	link			= "http://indico.cern.ch/materialDisplay.py?contribId=s7t4\&sessionId=8\&\hfil\break materialId=0\&confId=a045699"
 }
 
 @Techreport{al collim,
@@ -268,3 +308,37 @@
 	number			= "1133082"
 	year			= "2011"
 }
+
+#------------------------------------------- STATISTICS ---------------------------------------------
+
+@Book{becvar,
+	author="Be\v cv\'a\v r, F.",
+	title="Lecture notes",
+	year="2001"
+}
+
+@Book{barlow,
+	author    = "Barlow, R. J.",
+	title     = "Statistics: a guide to the use of statistical methods in the physical sciences.",
+	publisher = "Wiley",
+	year	  = "1989"
+}
+
+#------------------------------------------- MY NOTES -----------------------------------------------
+
+@Techreport{smearing,
+	author			= "Ka\v spar, J.",
+	institution		= "TOTEM",
+	title			= "Description and simulation of beam smearing effects",
+	type			= "TOTEM-NOTE"
+	number			= "2007-005"
+	year			= "2007"
+}
+
+#-------------------------------------------- OTHER -------------------------------------------------
+
+@Url{wikipedia,
+	title="Wikipedia",
+	url = "http://en.wikipedia.org/"
+}
+
