--- a/2010/thesis/smearing.tex
+++ b/2010/thesis/smearing.tex
@@ -1,10 +1,8 @@
-TODO:
-
-Si vx. Ci on page 3 top
-
-page 16: C2 -> -C2, S2 -> -S2
-
-page 29: case with small alpha
+\TODO{
+\> Si vx. Ci on page 3 top
+\> page 16: C2 -> -C2, S2 -> -S2
+\> page 29: case with small alpha
+}
 
 \subsection{Introduction}
 
