added plots for pattern recognition
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@3960 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/elasticReco.tex
+++ b/2010/thesis/elasticReco.tex
@@ -6,7 +6,7 @@ In principle, one may also employ the knowledge of vertex distribution at the IP
 
 Regardless whether the IP information is used, input data form a list of $(x, \si_x, y, \si_y|\penalty0 L_x, L_y, v_x, v_y)$, one per RP (or IP measurement).
 
-\fig[8cm]{erfig/pdf/theta_yVstheta_y_reco.pdf}{theta local reco}{[]$\th_y$ generated (at IP) vs. reconstructed (at RP) for $90\un{m}$ optics: no interesting correlation. The reason is too small lever-arm for the given detector pitch. One can clearly see the strip pattern.}
+\fig[8cm]{erfig/pdf/theta_yVstheta_y_reco.pdf}{theta local reco}{$\th_y$ generated (at IP) vs. reconstructed (at RP) for $90\un{m}$ optics: no interesting correlation. The reason is too small lever-arm for the given detector pitch. One can clearly see the strip pattern.}
 
 
 
